--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/script.js" defer></script>
 </head>
-<body>
+<div>
     <form id="form">
         <textarea id="dailyNote" cols="30" rows="10" placeholder="What did you do today?..."></textarea> <br>
         <button class="btn btn-primary" type="submit">Save</button>        
@@ -15,6 +15,7 @@
     <div class="container">
 
 
+        </div>
     </div>
 </body>
 </html>
