--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/script.js" defer></script>
+    <style>
+        body{
+            background-image: url();
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+        }
+    </style>
 </head>
 <div>
     <form id="form">
         <textarea id="dailyNote" cols="30" rows="10" placeholder="What did you do today?..."></textarea> <br>
-        <button class="btn btn-primary" type="submit">Save</button>        
+        <button class="textArea" type="submit">Save</button>        
     </form>
     <div class="container">
 
