bi kayıt almam şart bişiler yapcam çalışan versiyon dursun bari

--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
     <script src="assets/js/script.js" defer></script>
     <style>
         body{
-            background-image: url();
+            margin: 20px;
+            padding: 0;
+            background-image: url(assets/img/lofiGorl.jpeg);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
+            background-attachment: fixed;
         }
     </style>
 </head>
 <div>
+    <h1 id="header">Daily</h1>
     <form id="form">
         <textarea id="dailyNote" cols="30" rows="10" placeholder="What did you do today?..."></textarea> <br>
-        <button class="textArea" type="submit">Save</button>        
+        <button class="saveBtn" type="submit">Save</button>        
     </form>
     <div class="container">
 
 
         </div>
     </div>
+
+
 </body>
 </html>
