--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <h1 id="header">Daily</h1>
     <form id="form">
         <textarea id="dailyNote" cols="30" rows="10" placeholder="What did you do today?..."></textarea> <br>
-        <button class="saveBtn" type="submit">Save</button>        
+        <button class="saveBtn" type="submit">Save</button> 
     </form>
     <div class="container">
 
 
         </div>
     </div>
-
+    <footer id="myFooter">sa</footer>
 
 </body>
 </html>
