--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
 
         </div>
     </div>
-    <footer id="myFooter">sa</footer>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="#">Daily</a></li>
+                <li><a href="hakkimda.html">About Me</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 </html>
