--- a/hakkimda.html
+++ b/hakkimda.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/hakkimda.css">
     <style>
         body{
-            background-image: url(assets/img/logiMan.jpg);
+            background-image: url(assets/img/hakkimdaBackGround.jpg);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -17,11 +18,23 @@
     </style>
 </head>
 <body>
+    <div class="pBox">
+        <p>Merhaba ben Hakan 18 yaşındayım <br>
+            yazılım öğrencisiyim öğrendiklerimle <br>
+            birşeyler yapmaya çalışıyorum şuan bi günlük <br>
+            uygulaması yapmaya çalıştım bildiklerimle <br>
+            kendimi geliştirdikçe burayıda geliştiricem <br>
+            yaptığım şeyleri görmek isterseniz Github adresime <br>
+            göz atabilirsiniz Teşekkür ederim.
+        </p>
+    </div>
     <footer>
         <nav>
             <ul>
                 <li><a href="index.html">Daily</a></li>
                 <li><a href="#">About Me</a></li>
+                <li><a href="https://github.com/Hakaantkn">Github</a></li>
+
             </ul>
         </nav>
     </footer>
