--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <ul>
                 <li><a href="#">Daily</a></li>
                 <li><a href="hakkimda.html">About Me</a></li>
+                <li><a href="https://github.com/Hakaantkn">Github</a></li>
             </ul>
         </nav>
     </footer>
