--- a/hakkimda.html
+++ b/hakkimda.html
@@ -33,7 +33,7 @@
             <ul>
                 <li><a href="index.html">Daily</a></li>
                 <li><a href="#">About Me</a></li>
-                <li><a href="https://github.com/Hakaantkn">Github</a></li>
+                <li><a href="https://github.com/Hakaantkn" target="_blank">Github</a></li>
 
             </ul>
         </nav>
